--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parse": "^5.3.3"
+    "csv": "^6.3.6",
+    "csv-parse": "^5.5.3"
   }
 }
